--- a/.github/workflows/buildDev.yml
+++ b/.github/workflows/buildDev.yml
@@ -1,1 +1,34 @@
+name: devBuildAndroidWorkFLow-apk
+on:
+  push:
+    branches:
+      - master
 
+jobs:
+  install-and-test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Install npm dependencies
+        run: |
+          npm install
+
+  build-android:
+    needs: install-and-test
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Install npm dependencies
+        run: |
+          npm install
+      - name: Build Android Debug
+        run: |
+          chmod +x android/gradlew && cd android && ./gradlew assembleDebug
+      - name: List contents of release folder # Verifying APK file exists
+        run: |
+          ls -la android/app/build/outputs/apk/debug/
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: app-debug.apk
+          path: android/app/build/outputs/apk/debug/app-debug.apk
