--- a/.github/workflows/buildDev.yml
+++ b/.github/workflows/buildDev.yml
@@ -1,4 +1,5 @@
 name: devBuildAndroidWorkFLow-apk
+
 on:
   push:
     branches:
@@ -18,13 +19,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Install npm dependencies
-        run: |
-          npm install
       - name: Build Android Debug
         run: |
-          chmod +x android/gradlew && cd android && ./gradlew assembleDebug
-      - name: List contents of release folder # Verifying APK file exists
+          chmod +x android/gradlew
+          cd android
+          ./gradlew assembleDebug
+      - name: List contents of release folder
         run: |
           ls -la android/app/build/outputs/apk/debug/
       - name: Upload Artifact
